# sorocarbon

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy-retroshades.sh  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
contracts/komet-sink-carbon/: Cargo.toml  Makefile  kasmer.json
contracts/komet-sink-carbon/src/: komet.rs  lib.rs
contracts/sink-carbon/: Cargo.toml  Makefile  README.md
contracts/sink-carbon/src/: contract.rs  errors.rs  lib.rs  retroshades.rs  storage_types.rs  utils.rs
contracts/sink-carbon/src/tests/: fixtures.rs  mod.rs  test_sink_carbon.rs  test_supporting.rs  test_ttl_extension.rs  utils.rs
contracts/sink-carbon/test_snapshots/test/: test_sink_carbon_twice.1.json
contracts/sink-carbon/test_snapshots/tests/test_sink_carbon/: test_funder_account_or_trustline_missing.1.json  test_recipient_account_or_trustline_issues.1.json  test_sink_amount_too_low.1.json  test_sink_carbon_debug_komet.1.json  test_sink_carbon_happy.1.json  test_sink_carbon_max_i64.1.json  test_sink_carbon_separate_recipient.1.json  test_sink_carbon_twice.1.json
contracts/sink-carbon/test_snapshots/tests/test_supporting/: test_deactivate_unauthorized.1.json  test_reset_admin.1.json  test_set_and_get_successor.1.json  test_set_sink_minimum_as_admin.1.json
contracts/sink-carbon/test_snapshots/tests/test_ttl_extension/: test_extend_ttl_is_active.1.json  test_extend_ttl_sink_carbon.1.json
contracts/sink_carbon/: Cargo.toml
contracts/sink_carbon/src/: contract.rs  errors.rs  fixtures.rs  lib.rs  storage_types.rs  test.rs
(+28 files in other folders)
