[package]
name = "sink-carbon"
version = "0.4.4"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
mercury = ["dep:retroshade-sdk"]

[dependencies]
soroban-sdk = { workspace = true }
retroshade-sdk = { version = "0.1.0", optional = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-env-host = { version = "*" }
stellar-strkey = { version = "*" }
